--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -1,1 +1,20 @@
-<%= current_user.email %> has <%= current_user.trips.count %> trip(s)
+<br>
+<br>
+<br><%= current_user.email %> has <%= @trips.count %> trip(s)
+<table class="table table-striped">
+    <thead>
+      <tr>
+        <th>Trip</th>
+        <th>Created at</th>
+      </tr>
+    </thead>
+    <tbody>
+
+      <% @trips.each do |t| %>
+        <tr>
+          <td><%= link_to t.title, trip_path(t) %></td>
+          <td><%= t.created_at %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
